Hopefully Fixed Spacing
- Resume h1 text now centered properly
- iPad display issue with footer links hopefully fixed

--- a/css/style.css
+++ b/css/style.css
@@ -556,7 +556,7 @@ footer {
 
 #footerNav ul {
     position: relative;
-    width: 155px;
+    width: 165px;
     left: 10px;
     right: 0px;
     margin: 35px auto 35px auto;
